--- a/_includes/publication-single.html
+++ b/_includes/publication-single.html
@@ -23,7 +23,7 @@
       <a href="{{ post.codeurl }}" style="text-decoration: none; color: #0066cc; margin-right: 15px;">[Code]</a>
     {% endif %}
     {% if post.paperurl %}
-      <a href="{{ post.paperurl }}" style="text-decoration: none; color: #0066cc; margin-right: 15px;">[arXiv]</a>
+      <a href="{{ post.paperurl }}" style="text-decoration: none; color: #0066cc; margin-right: 15px;">[Paper]</a>
     {% endif %}
     {% if post.bibtexurl %}
       <a href="{{ post.bibtexurl }}" style="text-decoration: none; color: #0066cc; margin-right: 15px;">[BibTeX]</a>
